--- a/inc/sass/style.scss
+++ b/inc/sass/style.scss
@@ -64,6 +64,10 @@ Tags: one-column, featured-images, theme-options, custom-background, custom-colo
 	background-color: var(--secondary);
 }
 
+.title {
+	font-family: 'PlatformWeb';
+}
+
 .hero {
 	background-color: $theme-color-one;
 	.title {
