giving icon breathing room

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,3 +67,7 @@ Tags: one-column, featured-images, theme-options, custom-background, custom-colo
 .admin-bar .is-fixed-top {
 	top: 32px;
 }
+
+.icon {
+	width: 100%;
+}
