--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Paper Press
+Theme Name: BulmaPress
 Theme URI: https://github.com/freddiemixell
-Author: Paper Press
+Author: BulmaPress
 Author URI: https://github.com/freddiemixell
-Version: 0.3.0
+Version: 0.4.0
 License: MIT
-Text Domain: paper-press
+Text Domain: bulma-press
 Domain Path: /languages/
 Tags: one-column, featured-images, theme-options, custom-background, custom-colors, custom-menu, editor-style, translation-ready, footer-widgets, full-width-template, blog
