--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,20 +1,20 @@
 /*
-Theme Name: Paper Press
-Theme URI: https://paperplaneco.com/themes/paper-press-wordpress-theme/
-Author: Paper Press
+Theme Name: BulmaPress
+Theme URI: https://paperplaneco.com/themes/bulma-press-wordpress-theme/
+Author: BulmaPress
 Author URI: https://paperplaneco.com/
-Description: A beautifully-simple yet powerful WordPress theme that integrates perfectly with the new Gutenberg editor and the Paper Press plugin. Start building amazing websites with the new WordPress editor today! Paper Press comes with theme options to customize your font style, body and title font sizes, content width and more! Install the Paper Press plugin (paperplaneco.com) to add even more page-building blocks such as testimonials, sharing icons, notices, call to actions, buttons and more. Theme Demo: https://paperplaneco.com/demo
+Description: A beautifully-simple yet powerful WordPress theme that integrates perfectly with the new Gutenberg editor and the BulmaPress plugin. Start building amazing websites with the new WordPress editor today! BulmaPress comes with theme options to customize your font style, body and title font sizes, content width and more! Install the BulmaPress plugin (paperplaneco.com) to add even more page-building blocks such as testimonials, sharing icons, notices, call to actions, buttons and more. Theme Demo: https://paperplaneco.com/demo
 Version: 1.2.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: paper-press
+Text Domain: bulma-press
 Domain Path: /languages/
 Tags: one-column, featured-images, theme-options, custom-background, custom-colors, custom-menu, editor-style, translation-ready, footer-widgets, full-width-template, blog
 
 (C) 2018 Array, Inc.
 */
 
-/* Import Paper Press Sass Variables (inc/sass/variables.scss) */
+/* Import BulmaPress Sass Variables (inc/sass/variables.scss) */
 @charset "utf-8";
 
 @font-face {
